--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_customer">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.jksdairyhub.jksdairyhub.App.Activities.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_customer"
+        android:name="com.jksdairyhub.jksdairyhub.App.Fragments.CustomerFragment"
+        android:label="@string/menu_customer"
+        tools:layout="@layout/fragment_customer" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.jksdairyhub.jksdairyhub.App.Activities.ui.gallery.GalleryFragment"
+        android:name="com.jksdairyhub.jksdairyhub.App.Fragments.GalleryFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.jksdairyhub.jksdairyhub.App.Activities.ui.slideshow.SlideshowFragment"
+        android:name="com.jksdairyhub.jksdairyhub.App.Fragments.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
